Fix sticky footer gap

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,4 +1,4 @@
 /* Sticky footer */
 .content {
-  min-height: calc(100% - 17.65%);
+  min-height: calc(100% - 16.2%);
 }
